update book services docs swagger
